--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,16 @@ before_install:
 
 script:
     - docker run mskdocker92/docker-react npm run test -- --coverage
+
+deploy:
+    provide: elasticbeanstalk
+    region: "us-east-1"
+    app: "docker-react" #aws app
+    env: "DockerReact-env"
+    bucket_name: "elasticbeanstalk-us-east-1-532585711156"
+    bucket_path: "docker-react" #same as app name
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key:
+        secure: "$AWS_SECRET_KEY"
