--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
     - docker build -t mskdocker92/docker-react -f Dockerfile.dev .
 
 script:
-    - docker run mskdocker92/docker-react npm run test -- --coverage
+    - docker run -e CI=true mskdocker92/docker-react npm run test
 
 deploy:
     provide: elasticbeanstalk
